<?xml version="1.0" encoding="utf-8"?>


        <ScrollView
            xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:app="http://schemas.android.com/apk/res-auto"
            xmlns:tools="http://schemas.android.com/tools"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/border_1"
            tools:context="moe.perci.haku.BillingNotes.AddFragment"
           >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical" >

                <android.support.constraint.ConstraintLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content">

                    <Spinner
                        android:id="@+id/AddF_sp_year"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="24dp"
                        android:layout_marginTop="32dp"
                        android:prompt="@string/AddF_year"
                        android:spinnerMode="dropdown"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <Spinner
                        android:id="@+id/AddF_sp_month"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="16dp"
                        android:layout_marginTop="32dp"
                        app:layout_constraintStart_toEndOf="@+id/AddF_sp_year"
                        app:layout_constraintTop_toTopOf="parent" />

                    <Spinner
                        android:id="@+id/AddF_sp_day"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="16dp"
                        android:layout_marginTop="32dp"
                        app:layout_constraintStart_toEndOf="@+id/AddF_sp_month"
                        app:layout_constraintTop_toTopOf="parent" />

                    <TextView
                        android:id="@+id/AddFragmentChoose1"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="24dp"
                        android:layout_marginTop="16dp"
                        android:text="@string/select_io"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/AddF_sp_year" />

                    <RadioGroup
                        android:id="@+id/AddF_rg_1"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="24dp"
                        android:layout_marginTop="16dp"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/AddFragmentChoose1"
                        tools:weightSum="1">

                        <RadioButton
                            android:id="@+id/radioButton2"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:checked="true"
                            android:text="@string/use" />

                        <RadioButton
                            android:id="@+id/radioButton3"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:checked="false"
                            android:text="@string/get" />

                    </RadioGroup>

                    <TextView
                        android:id="@+id/textView"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="24dp"
                        android:layout_marginTop="16dp"
                        android:text="@string/select_form"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/AddF_rg_1" />

                    <RadioGroup
                        android:id="@+id/AddF_rg_2"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="24dp"
                        android:layout_marginTop="16dp"
                        android:layout_weight="0"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/textView">

                        <RadioButton
                            android:id="@+id/radioButton4"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:checked="false"
                            android:text="@string/cash" />

                        <RadioButton
                            android:id="@+id/radioButton5"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:checked="true"
                            android:text="@string/WeChat" />

                        <RadioButton
                            android:id="@+id/radioButton6"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:text="@string/AliPay" />

                        <RadioButton
                            android:id="@+id/radioButton"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:text="@string/other" />

                        <EditText
                            android:id="@+id/AddF_other"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:cursorVisible="false"
                            android:ems="10"
                            android:hint="@string/other"
                            android:inputType="textPersonName"
                            android:visibility="gone" />
                    </RadioGroup>

                    <EditText
                        android:id="@+id/AddP_main"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="24dp"
                        android:layout_marginTop="16dp"
                        android:ems="10"
                        android:hint="@string/main"
                        android:inputType="textPersonName"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/AddF_rg_2" />

                    <EditText
                        android:id="@+id/AddP_sum"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="24dp"
                        android:layout_marginTop="16dp"
                        android:ems="10"
                        android:hint="@string/amount"
                        android:inputType="textPersonName"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/AddP_main" />

                    <android.support.constraint.ConstraintLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        tools:layout_editor_absoluteY="457dp">

                    </android.support.constraint.ConstraintLayout>

                    <EditText
                        android:id="@+id/AddF_content"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="24dp"
                        android:layout_marginTop="16dp"
                        android:layout_weight="0"
                        android:ems="10"
                        android:hint="@string/content"
                        android:inputType="textMultiLine|textPersonName"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/AddP_sum" />

                    <Button
                        android:id="@+id/AddF_submit"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="24dp"
                        android:layout_marginTop="16dp"
                        android:layout_weight="0"
                        android:background="@drawable/btn_1"
                        android:text="@string/add"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/AddF_content" />
                </android.support.constraint.ConstraintLayout>
            </LinearLayout>
        </ScrollView>




