<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/border_1"
    tools:context=".AllFragment">
    <!-- TODO: Update blank fragment layout -->

    <android.support.constraint.ConstraintLayout
        android:id="@+id/constraintLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/AllF_today_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="16dp"
            android:text="@string/today"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/AllF_today"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            app:layout_constraintBaseline_toBaselineOf="@+id/AllF_today_title"
            app:layout_constraintStart_toEndOf="@+id/AllF_today_title" />

        <View
            android:layout_width="wrap_content"
            android:layout_height="1dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="4dp"
            android:layout_marginEnd="8dp"
            android:background="#FF4081"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/AllF_today_title" />
    </android.support.constraint.ConstraintLayout>

    <android.support.constraint.ConstraintLayout
        android:id="@+id/constraintLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="64dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TableRow
            android:id="@+id/tableRow5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toTopOf="@+id/tableRow"
            app:layout_constraintStart_toStartOf="parent">

            <TextView
                android:id="@+id/AllF_out_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/use"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/AllF_out"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
        </TableRow>

        <TableRow
            android:id="@+id/tableRow6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toTopOf="@+id/tableRow5"
            app:layout_constraintStart_toStartOf="parent">

            <TextView
                android:id="@+id/AllF_sum_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/sum"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/AllF_sum"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
        </TableRow>

        <TableRow
            android:id="@+id/tableRow"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toTopOf="@+id/tableRow4"
            app:layout_constraintStart_toStartOf="parent">

            <TextView
                android:id="@+id/AllF_get_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/get"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/AllF_get"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
        </TableRow>

        <TableRow
            android:id="@+id/tableRow4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toTopOf="@+id/tableRow3"
            app:layout_constraintStart_toStartOf="parent">

            <TextView
                android:id="@+id/AllF_month_used_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/month_used"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/AllF_month_used"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
        </TableRow>

        <TableRow
            android:id="@+id/tableRow3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toTopOf="@+id/tableRow2"
            app:layout_constraintStart_toStartOf="parent">

            <TextView
                android:id="@+id/AllF_month_remaining_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/month_remaining"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/AllF_month_remaining"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
        </TableRow>

        <TableRow
            android:id="@+id/tableRow2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent">

            <TextView
                android:id="@+id/AllF_day_average_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/day_average"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/AllF_day_average"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
        </TableRow>

        <View
            android:layout_width="wrap_content"
            android:layout_height="1dp"
            android:layout_marginTop="4dp"
            android:background="#FF4081"
            app:layout_constraintTop_toBottomOf="@+id/tableRow2"
            tools:layout_editor_absoluteX="0dp" />
    </android.support.constraint.ConstraintLayout>


    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="250dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:background="@drawable/btn_1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/constraintLayout">

        <android.support.v7.widget.RecyclerView
            android:id="@+id/AllF_re"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            tools:layout_editor_absoluteX="117dp"
            tools:layout_editor_absoluteY="278dp">

        </android.support.v7.widget.RecyclerView>
    </FrameLayout>

</android.support.constraint.ConstraintLayout>